--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -23,10 +23,6 @@ body.fullscreen #container {
   width: 96%;
 }
 
-#footer-span {
-  position:relative;
-}
-
 #NavMenu ul {
   background: transparent;
 }
